Minor adjustment to plot labels
Minor adjustment to plot labels

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -25,9 +25,8 @@ Calculate the total number of steps taken per day and plot histogram of Measured
 # sum steps per day for Measured data
 perDayMea <- tapply(actMea$steps, actMea$date, FUN = sum)
 
-# plot histogram
 par(mfrow=c(1,1))
-metaHist <- hist(perDayMea, main="Measured Data - Including NAs")
+metaHist <- hist(perDayMea, main="Measured Data - Including NAs", xlab="Steps Per Day")
 for (i in 1:length(metaHist$mids)){
     text(x=metaHist$mids[i],y=metaHist$counts[i],toString(metaHist$counts[i]), pos=3)
 }
@@ -102,7 +101,8 @@ Make a histogram of the total number of steps taken each day
 ```{r, "Figure 3 - Imputed Data", fig.height=8, fig.width=10}
 # plot histogram for imputed data
 StepsPerDayImp <- tapply(actImp$steps, actImp$date, FUN = sum)
-metaHist <- hist(StepsPerDayImp, main="Imputed Data - NAs replaced with Mean of 5 minute interval")
+mTitle = "Imputed Data - NAs replaced with Mean of 5 minute interval"
+metaHist <- hist(StepsPerDayImp, main=mTitle, xlab = "Steps Per Day ")
 for (i in 1:length(metaHist$mids)){
     text(x=metaHist$mids[i],y=metaHist$counts[i],toString(metaHist$counts[i]), pos=3)
 }
